Bug 156462 - ctrl+left in calc doesn't jump to the first cell with content to the left of the cursor
Summary: ctrl+left in calc doesn't jump to the first cell with content to the left of ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.5.0.0 beta1+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:24.2.0 target:7.5.6 target:7.6...
Keywords:
Depends on:
Blocks:
 
Reported: 2023-07-25 11:12 UTC by Caolán McNamara
Modified: 2023-08-07 13:16 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
simple example (7.83 KB, application/vnd.oasis.opendocument.spreadsheet)
2023-07-25 11:17 UTC, Caolán McNamara
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Caolán McNamara 2023-07-25 11:12:34 UTC
Description:
if the is no content under the cursor and we press ctrl+left in calc it should jump to the first cell with content to the left of the cursor

Steps to Reproduce:
1. load attachment
2. put cursor in G2
3. Press ctrl+left

Actual Results:
cursor jumps to C2

Expected Results:
it should jump to D2


Reproducible: Always


User Profile Reset: No

Additional Info:
bisected this to:

commit 9e2d48b9e04f7ea895fb095699c32ed8a44eb129
Date:   Wed Mar 30 11:58:04 2022 +0200

    reduce Calc's INITIALCOLCOUNT to 1

but:

commit a680f6988482f13489d6c802b6078d43564ae934
Date:   Wed Jun 7 22:48:01 2017 +0530

    tdf#50916 : More refactoring in table1.cxx

is likely also relevant wrt: "If nCol is in the unallocated range [nLastCol+1, MAXCOL], then move it directly to nLastCol"
Comment 1 Caolán McNamara 2023-07-25 11:17:54 UTC
Created attachment 188546 [details]
simple example
Comment 2 Commit Notification 2023-07-25 12:34:03 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bbdb62ca2f5545588b2e6d11421c6038425cebab

Resolves: tdf#156462 ctrl+left in calc doesn't always jump to the correct cell

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Xisco Faulí 2023-08-01 14:03:36 UTC
Verified in

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f9631765c9dfd805ae486a94eacb69d307c9eef1
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!
Comment 4 Commit Notification 2023-08-01 14:04:44 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/ce8c23e885404f971bc41b48cea8f9b56e345f80

Resolves: tdf#156462 ctrl+left in calc doesn't always jump to the correct cell

It will be available in 7.5.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-08-01 14:04:47 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/6f67c238f69e6d3b83967547de2f6649f0af766d

Resolves: tdf#156462 ctrl+left in calc doesn't always jump to the correct cell

It will be available in 7.6.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2023-08-01 17:34:17 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/cfb1e6354e095d0addf9f7a1114902b2bce5f627

tdf#156462: sc_uicalc: Add unittest

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2023-08-07 13:16:42 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-6-0":

https://git.libreoffice.org/core/commit/03849f2bfef3b788c054c1a7dfb521d7d4cd6121

Resolves: tdf#156462 ctrl+left in calc doesn't always jump to the correct cell

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.