Resolves: tdf#156462 ctrl+left in calc doesn't always jump to the correct cell

since:

commit 9e2d48b9e04f7ea895fb095699c32ed8a44eb129
Date:   Wed Mar 30 11:58:04 2022 +0200

    reduce Calc's INITIALCOLCOUNT to 1

but:

commit a680f6988482f13489d6c802b6078d43564ae934
Date:   Wed Jun 7 22:48:01 2017 +0530

    tdf#50916 : More refactoring in table1.cxx

is likely also relevant wrt: "If nCol is in the unallocated range
[nLastCol+1, MAXCOL], then move it directly to nLastCol"

If the cursor is outside the allocated column range then the search
started 1 cell to the left of the last allocated column

Change-Id: I854173ad13d50e50d85e9902b31585e8ae3e2c0e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154910
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>